add regist page

--- a/identity_oauth2_server/conf/app.conf
+++ b/identity_oauth2_server/conf/app.conf
@@ -5,6 +5,8 @@ runmode = dev
 adminUserName = douchunrong
 adminUserPwd = 111111
 
+rootPath = http://127.0.0.1/
 
 [mongodb]
 url = mongodb://127.0.0.1:27017/identity_oauth2_server
+
